# Kubi-s-LLM-Benchmark

./: .env  .gitignore  CLAUDE.md  LICENSE  README.md  analyze_anomalies.py  big_european_airports.csv  check_consistency.py  detect_latex_answers.py  evaluators.py  find_anomalies.py  fix_run_200141.py  fix_standings.py  human_eval_server.py  integrate_human_scores.py  judge_model.txt  main.py  model_api.py  models.txt  pyproject.toml  utils.py  verify_benchmark_scores.py  verify_points.py  verify_run_consistency.py
config/: judge_model.txt  models.txt  questions-except-human-eval.txt  questions-human-eval-only.txt  questions-wordgames.txt  questions.txt  questions_check_for_timeout.txt
utils/: __init__.py  analyze_timeouts.py  battleship_match.py  benchmark_runner.py  calculate_costs.py  combine_results.py  cost_effective.py  evaluators.py  human_eval_server.py  integrate_human_scores.py  model_api.py  point_adjusting.py  question_loader.py  question_renamer.py  rebuild_basic_log.py  remove_run_results.py  rename_question_indexes.py  reorder_question_blocks.py  reorder_questions.py  reporting.py  split_results.py  sync_run_scores.py  utils.py
utils/templates/: human_eval.html
verifier_scripts/: A9_longest_word_verifier_example.py
